--- a/api/pom.xml
+++ b/api/pom.xml
@@ -12,7 +12,6 @@
     <artifactId>api</artifactId>
 
     <dependencies>
-
         <dependency>
             <groupId>com.switchfully.stockexchange</groupId>
             <artifactId>service</artifactId>
@@ -25,6 +24,12 @@
             <version>1.0-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+
+
     </dependencies>
 
 </project>
