--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <module>service</module>
         <module>domain</module>
         <module>interfaces</module>
+        <module>jar</module>
     </modules>
 
     <properties>
